kustomize/overlays/prod/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toc-linebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toc-linebot
  template:
    metadata:
      labels:
        app: toc-linebot
    spec:
      containers:
        - name: dbonk8s
