kustomize/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toc-linebot
  labels:
    app: toc-linebot
spec:
  selector:
    app: toc-linebot
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
