kustomize/overlays/prod/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
    kubernetes.io/ingress.class: gce
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    kubernetes.io/ingress.global-static-ip-name: web-ip
    # cert-manager.io/issuer: letsencrypt-production
spec:
  rules:
    - host: linebot.yungen.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: toc-linebot
                port:
                  number: 8080
  tls:
    - secretName: linebot-ssl
      hosts:
        - linebot.yungen.dev
---
